optimized preload of comments from db
