# routes/routes.go
@@ -12,6 +12,12 @@ func InitRoutes(e *echo.Echo) {
 	// posts endpoints
 	e.POST("/api/posts", handlers.CreatePost, middleware.JWTMiddleware)
 	e.GET("/api/posts", handlers.GetPosts)
+	e.GET("/api/posts/:id", handlers.GetPostByID)
+	e.PUT("/api/posts/:id", handlers.UpdatePost, middleware.JWTMiddleware)
+	e.DELETE("/api/posts/:id", handlers.DeletePost, middleware.JWTMiddleware)
 	// comments endpoints
-	e.POST("/api/posts/:id/comments", handlers.CreateComment, middleware.JWTMiddleware)
+	e.POST("/api/posts/comments", handlers.CreateComment, middleware.JWTMiddleware)
+	e.GET("/api/posts/comment/:id", handlers.GetCommentById)
+	e.GET("/api/posts/comments/:id", handlers.GetCommentsByPostId)
+	e.DELETE("/api/posts/comments/:id", handlers.DeleteComment, middleware.JWTMiddleware)
 }
